--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
             <div class="contact-info">
                 <div class="info-box">
                     <i class="fas fa-phone-alt"></i>
-                    <p>+39 371 1655940</p>
+                    <p>+39 111111111</p>
                 </div>
                 <div class="info-box">
                     <i class="fas fa-envelope-open"></i>
-                    <p style="text-transform: lowercase;"> info.martinogiancarlo@gmail.com</p>
+                    <p style="text-transform: lowercase;"> info.ciaociao.ciao</p>
                 </div>
                 <div class="info-box">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>Porto Cesareo - via Carmiano, 34 - Lecce (IT)</p>
+                    <p>Lecce (IT)</p>
                 </div>
                 <div class="info-box social">
                     <a href="https://github.com/GiancarloMartino"><i class="fab fa-github"></i></a>
